--- a/PANEL_APP/timer.css
+++ b/PANEL_APP/timer.css
@@ -1,6 +1,44 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+  font-family: "Open Sans", sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+#context-menu {
+  position: fixed;
+  z-index: 10000;
+  width: 150px;
+  background: #1b1a1a;
+  border-radius: 5px;
+  display: none;
+}
+
+#context-menu.visible {
+   display: block;
+}
+
+#context-menu .item {
+  padding: 8px 10px;
+  font-size: 15px;
+  color: #eee;
+  cursor: pointer;
+  border-radius: inherit;
+}
+
+#context-menu .item:hover {
+  background: #343434;
+}
+
 button
 {
 font-size:15px;
+margin-top: 10px;
+margin-left: 10px;
+min-height: 50px;
+min-width: 50px;
 background-color:black;
 color:white;
 }
