--- a/learningJS-frank/timer.css
+++ b/learningJS-frank/timer.css
@@ -9,6 +9,8 @@ body {
     padding: 24px 32px;
     border-radius: 30px;
     background: white;
+    position: relative;
+    top: 100px;
 }
 
 .timer__part {
