--- a/PANEL_APP/timer.css
+++ b/PANEL_APP/timer.css
@@ -1,56 +1,80 @@
-html,
 body {
-  width: 100%;
-  height: 100%;
-  font-family: "Open Sans", sans-serif;
-  padding: 0;
-  margin: 0;
+  background: #dddddd;
+  margin: 24px;
 }
 
-#context-menu {
-  position: fixed;
-  z-index: 10000;
-  width: 150px;
-  background: #1b1a1a;
-  border-radius: 5px;
-  display: none;
+.timer {
+  font-family: sans-serif;
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 30px;
+  background: rgb(243, 151, 90);
 }
 
-#context-menu.visible {
-   display: block;
+.timer__part {
+  font-size: 36px;
+  font-weight: bold;
 }
 
-#context-menu .item {
-  padding: 8px 10px;
-  font-size: 15px;
-  color: #eee;
+.timer__btn {
+  width: 50px;
+  height: 50px;
+  margin-left: 16px;
+  border-radius: 50%;
+  border: none;
+  color: white;
+  background: #8208e6;
   cursor: pointer;
-  border-radius: inherit;
 }
 
-#context-menu .item:hover {
-  background: #343434;
+.timer__btn--start {
+  background: #00b84c;
 }
 
-button
-{
-font-size:25px;
-background-color:rgb(12, 14, 29);
-color:rgb(197, 21, 21);
-}
-#count
-{
-   margin-left:40px;
-   font-style: normal;
-   font-size:25px;
-   color:rgb(216, 19, 19);
+.timer__btn--stop {
+  background: #ff0256;
 }
 
-body{
-   background-color: blueviolet;
-   font-family: Verdana, Geneva, Tahoma, sans-serif;
-   font-weight: 600;
-   line-height: 2em;
-   margin: auto
+.text {
+  background: rgb(87, 139, 218);
+  border-radius: 30px;
+  text-align: center;
+  font-weight: bold;
+}
 
+.timer2 {
+  font-family: sans-serif;
+  display: inline-block;
+  padding: 24px 32px;
+  padding-top: 50px;
+  border-radius: 30px;
+  background: rgb(243, 151, 90);
+  position: fixed;
+  top: 110px;
+  left: 24px;
+  z-index: -1;
+}
+
+.timer2__part {
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.timer2__btn {
+  width: 50px;
+  height: 50px;
+  margin-left: 16px;
+  border-radius: 50%;
+  border: none;
+  color: white;
+  background: #8208e6;
+  cursor: pointer;
+}
+
+.timer2__btn--start {
+  background: #00b84c;
+}
+
+.timer2__btn--stop {
+  background: #ff0256;
 }
