--- a/PANEL_APP/timer.css
+++ b/PANEL_APP/timer.css
@@ -1,10 +1,91 @@
-html,
 body {
+  margin: 24px;
+  background-color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 600;
+  line-height: 2em;
   width: 100%;
   height: 100%;
-  font-family: "Open Sans", sans-serif;
   padding: 0;
-  margin: 0;
+}
+
+.timer {
+  font-family: sans-serif;
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 30px;
+  position: fixed;
+  bottom: 30px;
+  left: 24px;
+  background: rgb(243, 151, 90);
+  position: fixed;
+}
+
+.timer__part {
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.timer__btn {
+  width: 50px;
+  height: 50px;
+  margin-left: 16px;
+  border-radius: 50%;
+  border: none;
+  color: white;
+  background: #8208e6;
+  cursor: pointer;
+}
+
+.timer__btn--start {
+  background: #00b84c;
+}
+
+.timer__btn--stop {
+  background: #ff0256;
+}
+
+.text {
+  background: rgb(87, 139, 218);
+  border-radius: 30px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.timer2 {
+  font-family: sans-serif;
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 30px;
+  background: rgb(243, 151, 90);
+  position: fixed;
+  bottom: 30px;
+  left: 350px;
+  z-index: -1;
+}
+
+.timer2__part {
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.timer2__btn {
+  width: 50px;
+  height: 50px;
+  margin-left: 16px;
+  border-radius: 50%;
+  border: none;
+  color: white;
+  background: #8208e6;
+  cursor: pointer;
+}
+
+.timer2__btn--start {
+  background: #00b84c;
+}
+
+.timer2__btn--stop {
+  background: #ff0256;
 }
 
 #context-menu {
@@ -34,23 +115,48 @@ body {
 
 button
 {
-font-size:25px;
-background-color:rgb(12, 14, 29);
-color:rgb(197, 21, 21);
+font-size:20px;
 }
+
+.button_create
+{
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 30px;
+  border: none;
+  background: green;
+  color:black;
+}
+
+.button_deleteAll
+{
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 30px;
+  border: none;
+  background: red;
+  color:black;
+}
+
+.list
+{
+  background: gray;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 17px;
+  white-space: pre-line;
+  word-spacing: 3px;
+  border: none;
+  padding: 10px 10px;
+  border-radius: 10px;
+}
+
 #count
 {
    margin-left:40px;
    font-style: normal;
    font-size:25px;
    color:rgb(216, 19, 19);
-}
-
-body{
-   background-color: blueviolet;
-   font-family: Verdana, Geneva, Tahoma, sans-serif;
-   font-weight: 600;
-   line-height: 2em;
-   margin: auto
-
 }
