--- a/PANEL_APP/timer.css
+++ b/PANEL_APP/timer.css
@@ -88,36 +88,29 @@ body {
   background: #ff0256;
 }
 
-.timer {
-  font-family: sans-serif;
-  display: inline-block;
-  padding: 10px 32px;
-  border-radius: 30px;
-  background: rgb(243, 151, 90);
+#context-menu {
+  position: fixed;
+  z-index: 10000;
+  width: 150px;
+  background: #1b1a1a;
+  border-radius: 5px;
+  display: none;
 }
 
-.timer__part {
-  font-size: 36px;
-  font-weight: bold;
+#context-menu.visible {
+   display: block;
 }
 
-.timer__btn {
-  width: 50px;
-  height: 50px;
-  margin-left: 16px;
-  border-radius: 50%;
-  border: none;
-  color: white;
-  background: #8208e6;
+#context-menu .item {
+  padding: 8px 10px;
+  font-size: 15px;
+  color: #eee;
   cursor: pointer;
+  border-radius: inherit;
 }
 
-.timer__btn--start {
-  background: #00b84c;
-}
-
-.timer__btn--stop {
-  background: #ff0256;
+#context-menu .item:hover {
+  background: #343434;
 }
 
 button
