accidentally changed the start button color

--- a/PANEL_APP/timer.css
+++ b/PANEL_APP/timer.css
@@ -73,6 +73,14 @@ body {
   cursor: pointer;
 }
 
+.timer__btn--start {
+  background: #00b84c;
+}
+
+.timer__btn--stop {
+  background: #ff0256;
+}
+
 .timer2__btn--start {
   background: #00b84c;
 }
