--- a/PANEL_APP/timer.css
+++ b/PANEL_APP/timer.css
@@ -2,11 +2,6 @@ body {
   margin: 24px;
   background-color: rgb(135, 123, 207);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 600;
-  line-height: 2em;
-  width: 100%;
-  height: 100%;
-  padding: 0;
 }
 
 .timer {
@@ -14,11 +9,11 @@ body {
   display: inline-block;
   padding: 10px 32px;
   border-radius: 30px;
-  position: fixed;
   bottom: 140px;
   left: 24px;
   background: rgb(243, 151, 90);
-  position: fixed;
+  position: absolute;
+  line-height: 2em;
 }
 
 .timer__part {
@@ -51,10 +46,11 @@ body {
   padding-top: 40px;
   border-radius: 30px;
   background: rgb(243, 151, 90);
-  position: fixed;
   bottom: 30px;
   left: 24px;
   z-index: -1;
+  position: absolute;
+  line-height: 2em;
 }
 
 .timer2__part {
