--- a/PANEL_APP/style.css
+++ b/PANEL_APP/style.css
@@ -5,6 +5,14 @@
     font-family: "Quicksand", sans-serif;
 }
 
+title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 5rem;
+  }
+  
+
 html {
     font-size: 62.5%;
 }
